# MARVIN

./: .gitignore  .graphifyignore  .minisign-pubkey  CLAUDE.md  LICENSE  PLAN.md  README.md  REVIEW.md  agricore-prod  agricore-prod.pub  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.claude/: settings.json
.claude/commands/: graph-refresh.md  memory-compact.md  rebuild-app.md
.claude/hooks/: validate-bash.sh
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md  node-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/resources/next/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  roadmap.md
graphify-out/: .graphify_ast.json  .graphify_cached.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_detect.json  .graphify_semantic.json  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
macos/: BUILD.md  PHASE-1A-OBSERVATIONS.md  Package.swift  README.md  project.yml
scripts/: build-app-icon.sh  build-knowledge-graph.py  bundle-sidecar.sh  dev-screenshot.mjs  fetch-node.sh  install-skills.sh  install.sh  playwright-entry.cjs  release-v1.2.sh  run-tests-via-jiti.mjs  setup.sh  sidecar-launcher.sh  smoke-file-writes.sh  uninstall.sh  vitest-shim.mjs
sidecar/: next.config.ts  package.json  tsconfig.json
(+430 files in other folders)
