[package]
name = "marvin-desktop"
version = "1.0.0"
description = "MARVIN desktop — native macOS shell"
authors = ["Robert Ilisei"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "marvin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Mutex for the sidecar child handle — parking_lot's version is
# lightweight and doesn't panic on lock poisoning, which matters
# because we grab it from the WindowEvent::CloseRequested handler
# after the setup thread has already released it.
parking_lot = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
